fix 564hw and 561hw

--- a/docs/assignment561/hw01.Rmd
+++ b/docs/assignment561/hw01.Rmd
@@ -24,7 +24,7 @@ $$\implies\quad P(A\cap B)\ge P(A)+P(B)-(2-1)=\frac13+\frac34-1=\frac1{12}$$
 
 > According to properties of the probability function, $A\cap B\ne\emptyset$. Therefore, A and B don't satisfy the definition of pairwise disjoint.
 
-* 1.19 If a multivariate function has continuous partial derivatives, the order in which the derivatives are calculated does not matter. Thus, for example, the function f(x, y) of two variables has equal third partials  
+1.19 If a multivariate function has continuous partial derivatives, the order in which the derivatives are calculated does not matter. Thus, for example, the function f(x, y) of two variables has equal third partials  
 $$\frac{\partial^3}{\partial x^2\partial y}f(x,y)=\frac{\partial^3}{\partial y\partial x^2}f(x,y)$$
 
     (a) How many fourth partial derivatives does a function of three variables have? 
@@ -39,8 +39,9 @@ C(6,4)
 
 ```
 
-    (b) Prove that a function of n variables has ( n+;-1 ) rth partial derivatives.  
+   (b) Prove that a function of n variables has $\binom{n+r-1}{r})$ rth partial derivatives.  
 
+ > a function of n variables has rth partial derivatives. The count of partial deribatives means a combination selected from n variable with r time. 
 
 1.20 My telephone rings 12 times each week, the calls being randomly distributed among the 7 days. What is the probability that I get at least one call each day?  
 (Answer: .2285)
@@ -52,7 +53,8 @@ C(12,5)
 P(12,7)
 ```
 
-1.21 Verify the following identities for n 􀂉 2.  
+1.27 Verify the following identities for $n\ge2$.  
+
 (a) $\sum_{k=0}^n(-1)^k(_k^n)=0$  
 
 (b) $\sum_{k=1}^nk(_k^n)=n2^{n-1}$  
@@ -63,6 +65,7 @@ P(12,7)
 ---
 
 1.38 Prove each of the following statements. ( Assume that any conditioning event has positive probability.)  
+
 (a) If P(B) = 1 , then P(A|B) = P(A) for any A.  
 
 (b) If A $\subset$ B, then P(B|A) = 1 and P(A|B) = P(A)/P(B).  
