--- a/static/assignment564/lab01.Rmd
+++ b/static/assignment564/lab01.Rmd
@@ -34,15 +34,15 @@ $Z_i=\frac{X_i-\mu}n$ is called a **standard normal random variable**.
  > According to the definition of **Chi-square** distribution  
    When $Z_i$ is a SND,  $Z_{i}^2$ is a chi square distribution with 1 degree of freedom
 
- $$\therefore Z_i^2\sim \chi_1^2 $$
+ $$\therefore Z_i^2\sim \chi_1^2,\quad E(\chi_1^2)=1,\quad Var(\chi_1^2)=2\times1=1$$
 
  Let $y_2=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$  
  (f). Specify the probability distribution of $y_2$ along with the value(s) of parameter(s). 
 
- > According to the definition of Chi-square distribution,  when $X_i$ be indepentdent normally distributed random variables with $ E(X_i)=\mu\quad and\quad  Var(X_i)=\sigma^2\quad \frac{X_{i}-\mu}{\sigma}=Z_i$  
+ > According to the definition of Chi-square distribution,  when $X_i$ be indepentdent normally distributed random variables with $E(X_i)=\mu,\quad  Var(X_i)=\sigma^2,\quad \frac{X_{i}-\mu}{\sigma}=Z_i$  
 then the sum of n squared standard normal random variables follows a $\chi^2$ distribution **with n degrees of freedom**  
 
- $$\therefore y_2=\sum_{i=1}^3(\frac{X_{i}-\mu}{\sigma})=\sum_{i=1}^3Z_i\sim\chi_3^2$$
+ $$\therefore y_2=\sum_{i=1}^3(\frac{X_{i}-\mu}{\sigma})=\sum_{i=1}^3Z_i\sim\chi_3^2,\quad E(\chi_3^2)=3,\quad Var(\chi_3^2)=2\times3=6$$
 
 ### Problem 2
 
@@ -67,6 +67,8 @@ $$\frac{\overline{X}\sqrt n}{\sigma\sqrt{W/\nu_1}}=\frac{Z}{\sqrt{W/\nu_1}}\sim 
 
  > where $t_{\nu_1}$ is the t distribution with $\nu_1$ degrees of freedom.  
 
+$$E(t_{\nu_1})=0\quad when\ \nu_1>1,\quad Var(t_{\nu_1})=\begin{cases}\frac{\nu_1}{\nu_1-2}&when\ \nu_1>2 \\\infty &when\ 1<\nu_1<2\end{cases}$$
+
  Let $V\sim\chi_{\nu_2}^2$ where $\nu_{2}$ is the degrees of freedom, $V\ and\ W$ are indipendent.  
  Consider the new random variable $\frac{W/\nu_{1}}{V/\nu_{2}}$    
  (c). Specify the distribution of this new randome variable and provide value(s) of parameter(s).  
@@ -76,6 +78,8 @@ $$\frac{\overline{X}\sqrt n}{\sigma\sqrt{W/\nu_1}}=\frac{Z}{\sqrt{W/\nu_1}}\sim 
 $$\frac{W/\nu_{1}}{V/\nu_{2}}\sim F_{\nu_{1},\nu_{2}}$$
 
  > where $F\nu_1,\nu_2$ is the F distribution with $\nu_1$ and $\nu_2$ degrees of freedom.     
+
+$$E(F_{\nu_{1},\nu_{2}})=\frac{\nu_2}{\nu_2-2}\quad when\ \nu_2>2,\quad Var(F_{\nu_{1},\nu_{2}})=\frac{2\nu_2^2(\nu_1+\nu_2-2)}{\nu_1(\nu_2-2)^2(\nu_2-4)}\quad when\ \nu_2>4$$
 
 ### Problem 3
 
