--- a/docs/lecture561/lecture01.Rmd
+++ b/docs/lecture561/lecture01.Rmd
@@ -27,25 +27,25 @@ options(repos="https://cran.rstudio.com")
 
 
 
- <span>name</span> | <span>symbol</span>
- :------: | :------:
- subset | $\subset$ 
- intersection | $\cap$ 
- union | $\cup$ 
- Complement of A | $A^c$ 
- empty set | $\emptyset$ 
+ <span>name</span> | <span>symbol</span> ||<span>theorem</span> | <span>equation</span>
+ :------: | :------: || :------: | :------:
+ subset | $\subset$ ||   |
+ intersection | $\cap$  ||   |
+ union | $\cup$  ||   |
+ Complement of A | $A^c$  ||   |
+ empty set | $\emptyset$  ||   |
 
 ---
 #### 2. Axiomatic Foundations: Borel field
 Definition: 
-* A and B are _disjoint or mutually exclusive_, if $A\cup B=\emptyset$
+* A and B are _disjoint or mutually exclusive_, if $A\cap B=\emptyset$
 * Let B be a subset of all possible subset of S. Then B is a **Borel field** or a $\sigma$-algebra, if
 
- $$(1) $A\cup B=\emptyset$$  
+ $$(1). \emptyset\in B$$  
  
- $$(2). if $A\in B, then\ A^c\in B$$  
+ $$(2). if\ A\in B, then\ A^c\in B$$  
  
- $$(3). if $\{A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$$  
+ $$(3). if\ {A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$$  
 
 #### 3. Kolmogorov Axioms/of Probability
 let B be a **Borel field**. Then P is a **probability set function** if
