try table format in lecture561

--- a/docs/lecture561/lecture01.Rmd
+++ b/docs/lecture561/lecture01.Rmd
@@ -27,13 +27,25 @@ options(repos="https://cran.rstudio.com")
 
 
 
- <span>name</span> | <span>symbol</span> ||<span>theorem</span> | <span>equation</span>
- :------: | :------: || :------: | :------:
+ <span>name</span> | <span>symbol</span> ||theorem | <span>equation</span>
+ :------: | :------: + :------: | :------:
  subset | $\subset$ ||   |
  intersection | $\cap$  ||   |
  union | $\cup$  ||   |
  Complement of A | $A^c$  ||   |
  empty set | $\emptyset$  ||   |
+
+---
++---------------+---------------+--------------------+
+| Right         | Left          | Centered           |
++==============:+:==============+:==================:+
+| Bananas       | $1.34         | built-in wrapper   |
++---------------+---------------+--------------------+
+
+
++--------------:+:--------------+:------------------:+
+| Right         | Left          | Centered           |
++---------------+---------------+--------------------+
 
 ---
 #### 2. Axiomatic Foundations: Borel field
@@ -45,7 +57,7 @@ Definition:
  
  $$(2). if\ A\in B, then\ A^c\in B$$  
  
- $$(3). if\ {A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$$  
+ $$(3). if\ A_{1},A_{2},A_{3},...\subset B, then\ \bigcup_{n=1}^{\infty}\in B$$  
 
 #### 3. Kolmogorov Axioms/of Probability
 let B be a **Borel field**. Then P is a **probability set function** if
