adjust the table

--- a/docs/lecture561/lecture01.Rmd
+++ b/docs/lecture561/lecture01.Rmd
@@ -26,9 +26,9 @@ options(repos="https://cran.rstudio.com")
 * An **event** is a subset of S.
 
 
-
+ :------: + :------: + :------: + :------:
  <span>name</span> | <span>symbol</span> ||theorem | <span>equation</span>
- :------: | :------: + :------: | :------:
+ :======: + :======: + :=====: + :======:
  subset | $\subset$ ||   |
  intersection | $\cap$  ||   |
  union | $\cup$  ||   |
@@ -36,6 +36,8 @@ options(repos="https://cran.rstudio.com")
  empty set | $\emptyset$  ||   |
 
 ---
+
+
 +---------------+---------------+--------------------+
 | Right         | Left          | Centered           |
 +==============:+:==============+:==================:+
@@ -57,7 +59,7 @@ Definition:
  
  $$(2). if\ A\in B, then\ A^c\in B$$  
  
- $$(3). if\ A_{1},A_{2},A_{3},...\subset B, then\ \bigcup_{n=1}^{\infty}\in B$$  
+ $$(3). if\ A_{1},A_{2},A_{3},...\in B, then\ \bigcup_{n=1}^{\infty}\in B$$  
 
 #### 3. Kolmogorov Axioms/of Probability
 let B be a **Borel field**. Then P is a **probability set function** if
