adjust table 2nd

--- a/docs/lecture561/lecture01.Rmd
+++ b/docs/lecture561/lecture01.Rmd
@@ -26,16 +26,18 @@ options(repos="https://cran.rstudio.com")
 * An **event** is a subset of S.
 
 
- :------: + :------: + :------: + :------:
+
  <span>name</span> | <span>symbol</span> ||theorem | <span>equation</span>
- :======: + :======: + :=====: + :======:
- subset | $\subset$ ||   |
- intersection | $\cap$  ||   |
- union | $\cup$  ||   |
- Complement of A | $A^c$  ||   |
- empty set | $\emptyset$  ||   |
+ :------: | :------: | :------: | :------:
+ subset | $\subset$ || Commutativity  |
+ intersection | $\cap$  | Associativity  | ||
+ union | $\cup$  || Distributive Laws  |
+ Complement of A | $A^c$  |   ||
+ empty set | $\emptyset$  || DeMorgan's Laws  |
 
 ---
+
+
 
 
 +---------------+---------------+--------------------+
@@ -43,6 +45,8 @@ options(repos="https://cran.rstudio.com")
 +==============:+:==============+:==================:+
 | Bananas       | $1.34         | built-in wrapper   |
 +---------------+---------------+--------------------+
+
+
 
 
 +--------------:+:--------------+:------------------:+
