convert 561slides to html

--- a/docs/lecture561/lecture01.Rmd
+++ b/docs/lecture561/lecture01.Rmd
@@ -1,13 +1,15 @@
 ---
 title: "STAT 561"
-subtitle: "Sutdy notes"
+subtitle: "www.mth.pdx.edu/~fountain"
 author: "Teached by Fountain"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
-  xaringan::moon_reader:
-    css: "example.css"
-    seal: yes
-    nature:
+  html_document:
+     toc: true
+     number_sections: true
+     css: "example.css"
+     seal: yes
+     nature:
       highlightStyle: github
 
 ---
@@ -18,7 +20,10 @@ options(width = 2000)
 options(repos="https://cran.rstudio.com")
 ```
 
- 2018-09-26: www.mth.pdx.edu/~fountain
+## week 1 {.tabset .tabset-fade .tabset-pills}
+
+### 2018-09-26 {.tabset .tabset-fade .tabset-pills} 
+
 #### 1. Set Theory
 :           Definition  
 * An **experiment** is a process that leads to one of several possible outcomes.
@@ -27,43 +32,25 @@ options(repos="https://cran.rstudio.com")
 
 
 
- <span>name</span> | <span>symbol</span> ||theorem | <span>equation</span>
+ name | symbol | theorem | equation
  :------: | :------: | :------: | :------:
- subset | $\subset$ || Commutativity  |
- intersection | $\cap$  | Associativity  | ||
- union | $\cup$  || Distributive Laws  |
- Complement of A | $A^c$  |   ||
- empty set | $\emptyset$  || DeMorgan's Laws  |
+ subset | $\subset$ | Commutativity  | $A\cup B= B\cap A,A\cap B=B\cap A$
+ intersection | $\cap$  | Associativity  | $A\cup(B\cup C)=(A\cup B)\cup C$
+ union | $\cup$  | | $A\cap(B\cap C)=(A\cap B)\cap C$
+ Complement of A | $A^c$  | Distributive Laws  | $A\cap(B\cup C)=(A\cap B)\cup(A\cap C)$
+ empty set | $\emptyset$  |  | $A\cup(B\cap C)=(A\cup B)\cap(A\cup C)$
+|| DeMorgan's Laws  | $(A\cup B)^c=A^c\cap B^c, (A\cap B)^c=A^c\cup B^c$
 
----
-
-
-
-
-+---------------+---------------+--------------------+
-| Right         | Left          | Centered           |
-+==============:+:==============+:==================:+
-| Bananas       | $1.34         | built-in wrapper   |
-+---------------+---------------+--------------------+
-
-
-
-
-+--------------:+:--------------+:------------------:+
-| Right         | Left          | Centered           |
-+---------------+---------------+--------------------+
 
 ---
 #### 2. Axiomatic Foundations: Borel field
-Definition: 
 * A and B are _disjoint or mutually exclusive_, if $A\cap B=\emptyset$
 * Let B be a subset of all possible subset of S. Then B is a **Borel field** or a $\sigma$-algebra, if
 
- $$(1). \emptyset\in B$$  
- 
- $$(2). if\ A\in B, then\ A^c\in B$$  
- 
- $$(3). if\ A_{1},A_{2},A_{3},...\in B, then\ \bigcup_{n=1}^{\infty}\in B$$  
+> 
+ (1). $\emptyset\in B$  
+ (2). if $A\in B, then\ A^c\in B$  
+ (3). if $A_{1},A_{2},A_{3},...\in B, then\ \bigcup_{n=1}^{\infty}\in B$  
 
 #### 3. Kolmogorov Axioms/of Probability
 let B be a **Borel field**. Then P is a **probability set function** if
@@ -76,10 +63,10 @@ let B be a **Borel field**. Then P is a **probability set function** if
 
 #### 4. Example
 Roll a 6-sides die 
-> $S=\{1,2,3,4,5,6\}$
-  $B=\{\emptyset ,S,\{1,2\},\{3,4,5,6\}\}$  
+$$S=\{1,2,3,4,5,6\}$$
+$$B=\{\emptyset ,S,\{1,2\},\{3,4,5,6\}\}$$  
   
-  is a well-defined *Borel field*  
+is a well-defined *Borel field*  
 Define：
 > $P(A)=\begin{cases}1&if\ 2\in A \\o &otherwise\end{cases}$  
   
@@ -93,7 +80,7 @@ This is also a well-defined *probability function*
 #### 5. The properties of the probability function
 Theorem 1.2.8:
 > (1). $\forall A\in B,\ P(A^c)=1-P(A)$  
-  (2). $P(\emptyset)=0$
+  (2). $P(\emptyset)=0$  
   (3). $P(A)\le1$
 
 Proof (1): 
@@ -120,8 +107,8 @@ Proof:
    $P(A_{2}\cap A_{1}^c)\ge0$  
    $\therefore\ P(A_{2})\ge P(A_{1})$
 
----
- 2018-09-27
+
+### 2018-09-27 {.tabset .tabset-fade .tabset-pills}
 #### 1. The Calculus of Probabilities
 Define: $A\backslash B =A\cap B^c$
 Theorem 1.2.9: 
