--- a/docs/lecture564/reading01.Rmd
+++ b/docs/lecture564/reading01.Rmd
@@ -9,6 +9,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+### Text
 - Chapter 1
     - [1.1]
     - [1.3]
@@ -16,7 +17,8 @@ knitr::opts_chunk$set(echo = TRUE)
     - [2.2.1]
     - [2.2.2]
     - [2.2.3]
+### Class
 - Notes
-    - ![09.24.2018](09.24.2018.pdf)
-    - ![09.26.2018](09.26.2018.pdf)
-    - ![09.28.2018](09.28.2018.pdf)
+    - [09.24.2018](09.24.2018.pdf)
+    - [09.26.2018](09.26.2018.pdf)
+    - [09.28.2018](09.28.2018.pdf)
