--- a/static/lecture561/lecture01.Rmd
+++ b/static/lecture561/lecture01.Rmd
@@ -6,7 +6,6 @@ date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
   html_document:
      toc: true
-     number_sections: true
      css: "example.css"
      seal: yes
      nature:
@@ -22,12 +21,14 @@ options(repos="https://cran.rstudio.com")
 
 ## week 1 {.tabset .tabset-fade .tabset-pills}
 
-### 2018-09-26 {.tabset .tabset-fade .tabset-pills} 
+### 2018-09-25 {.tabset .tabset-fade .tabset-pills} 
 
 #### 1. Set Theory
 :           Definition  
 * An **experiment** is a process that leads to one of several possible outcomes.
+
 * The **sample space** (S) is the set of all possible outcomes of an experiment.
+
 * An **event** is a subset of S.
 
 
@@ -39,10 +40,10 @@ options(repos="https://cran.rstudio.com")
  union | $\cup$  | | $A\cap(B\cap C)=(A\cap B)\cap C$
  Complement of A | $A^c$  | Distributive Laws  | $A\cap(B\cup C)=(A\cap B)\cup(A\cap C)$
  empty set | $\emptyset$  |  | $A\cup(B\cap C)=(A\cup B)\cap(A\cup C)$
-|| DeMorgan's Laws  | $(A\cup B)^c=A^c\cap B^c, (A\cap B)^c=A^c\cup B^c$
+  |  | DeMorgan's Laws  | $(A\cup B)^c=A^c\cap B^c$
+  |  |   |  $(A\cap B)^c=A^c\cup B^c$
 
 
----
 #### 2. Axiomatic Foundations: Borel field
 * A and B are _disjoint or mutually exclusive_, if $A\cap B=\emptyset$
 * Let B be a subset of all possible subset of S. Then B is a **Borel field** or a $\sigma$-algebra, if
@@ -59,7 +60,6 @@ let B be a **Borel field**. Then P is a **probability set function** if
    (2). $P(S)=1$  
    (3). If $A_{1},A_{2},A_{3}$,...are pairwise disjoint, then $\ P(\bigcup_{n=1}^{\infty}A_i)=\sum_{i=1}^{\infty}P(A_{i})$
 
----
 
 #### 4. Example
 Roll a 6-sides die 
@@ -75,7 +75,6 @@ Define:
 > $P(A)=\frac{element in A}{6}$  
 
 This is also a well-defined *probability function*
----
 
 #### 5. The properties of the probability function
 Theorem 1.2.8:
@@ -94,7 +93,6 @@ Proof (2):
    $\emptyset\cup S=S$  
    $P(\emptyset\cup S)=P(\emptyset)+P(S)$; $P(\emptyset\cup S)=P(S)=1$
 
----
 #### 6. The Calculus of Probabilities
 Theorem 1.2.9:  
 >  Let $A_{1}$ and $A_{2}$ the elements of B with $A_{1}\subset A_{2}$, then  
@@ -122,7 +120,6 @@ Proof:
    By K-3, $P(A)=P(A\cap B)+P(A\cap B^c)$  
    $\therefore P(A)=P(A\cap B)+P(A\cap B^c)$  
 
----
 #### 2. The Calculus of Probabilities (v.2011)
 Theorem 1.2.9:
 >  $P(A\cup B)=P(A)+P(B)-P(A\cap B)$
@@ -133,7 +130,7 @@ Proof:
    $P(A\cup B)=P(A)+ P(B\cap A^c)$  
    $=P(A)+P(B)-P(B\cap A)$  
 
----
+
 #### 2.3. The Calculus of Probabilities
 Define:
 >  $C_{1},C_{2},C_{3},...$ form a partition of S if  
@@ -149,7 +146,7 @@ Proof:
    Since $A\cap C_i$ and $A\cap C_j$ are disjoint $\forall i\ne j$
    $\therefore P(A)= \sum_{i=1}^\infty P(A\cap C_{i})$ [by Kolmogorov-3]
 
----
+
 #### 4.5. Boole 's Inequality
 Theorem 1.2.11:
 >  Let $A_{1}, A_{2}$,...be events, then  
@@ -168,7 +165,7 @@ Note:
    $=\sum_{i=1}^\infty P(A_i^*)$
    $\le\sum_{i=1}^\infty P(A_i)$ since $A_i^*<A_i$  [By subset theorem]
 
----
+
 #### 6.7. Bonferroni inequality
 Theorem 1.2.10
 >Suppose we have n events $A_1, A_2,...A_n$  
@@ -182,7 +179,7 @@ Theorem 1.2.10
    $1-P(A_1\cap ...\cap A_n)\le n-\sum_{i=1}^\infty P(A_i)$  
    $P(A_1\cap ...\cap A_n)\ge\sum_{i=1}^\infty P(A_i)-(n-1)$  
 
----
+
 #### 8. Example of usage:
 Question:If LHS is to the at least .95, then what must each $P(A_i)$ be to guarantee that? (v.2011)
 
@@ -196,7 +193,7 @@ Intepretation: If you do 10 simulations
 Confidence intervals, each at 99.5%
 COnfidence, you will have joint confidence of at least 95%
 
----
+
 #### 9.10.11. Counting Rules
 (1). Multiplication Rule: If you have/perform a sequence of procedures, then the total number of outcomes is the product of the number of possible outcomes at each step  
 -Example: Flip 3 coins in sequence 2*2*2=8
@@ -205,7 +202,7 @@ COnfidence, you will have joint confidence of at least 95%
 (3). Permutation Rule: Start with n objects. The number of ways of selecting and ordering r of them is
  > $P_r^n=n(n-1)(n-2)...(n-r+1)=\frac{n!}{(n-r)!}$
 
----
+
 #### 12. Counting Rules 
 (4). Combination Rule: The number of ways of selecting r objects from n objects without regard to order, is "n choose r"
  > $C_r^n=(_n^r)=\frac{P_r^n}{r!}=\frac{n!}{r!(n-r)!}$
