arrange the 561 lecture

--- a/docs/lecture561/lecture01.Rmd
+++ b/docs/lecture561/lecture01.Rmd
@@ -6,7 +6,7 @@ date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
   html_document:
      toc: true
-     css: "example.css"
+     css: "ninjutsu.css"
      seal: yes
      nature:
       highlightStyle: github
@@ -24,13 +24,13 @@ options(repos="https://cran.rstudio.com")
 ### 2018-09-25 {.tabset .tabset-fade .tabset-pills} 
 
 #### 1. Set Theory
-:           Definition  
+Definition  
+
 * An **experiment** is a process that leads to one of several possible outcomes.
 
 * The **sample space** (S) is the set of all possible outcomes of an experiment.
 
 * An **event** is a subset of S.
-
 
 
  name | symbol | theorem | equation
@@ -40,8 +40,8 @@ options(repos="https://cran.rstudio.com")
  union | $\cup$  | | $A\cap(B\cap C)=(A\cap B)\cap C$
  Complement of A | $A^c$  | Distributive Laws  | $A\cap(B\cup C)=(A\cap B)\cup(A\cap C)$
  empty set | $\emptyset$  |  | $A\cup(B\cap C)=(A\cup B)\cap(A\cup C)$
-  |  | DeMorgan's Laws  | $(A\cup B)^c=A^c\cap B^c$
-  |  |   |  $(A\cap B)^c=A^c\cup B^c$
+ | |  | DeMorgan's Laws  | $(A\cup B)^c=A^c\cap B^c$
+ | |  |   |  $(A\cap B)^c=A^c\cup B^c$
 
 
 #### 2. Axiomatic Foundations: Borel field
@@ -78,17 +78,19 @@ This is also a well-defined *probability function*
 
 #### 5. The properties of the probability function
 Theorem 1.2.8:
+
 > (1). $\forall A\in B,\ P(A^c)=1-P(A)$  
   (2). $P(\emptyset)=0$  
   (3). $P(A)\le1$
 
 Proof (1): 
+
 >  $A\cap A^c=\emptyset$  
    $A\cup A^c=S$  
    $P(A\cup A^c)=P(A)+P(A^c)$  [by K-3]  
    $P(S)=1$                    [by K-2]  
 
-Proof (2):
+Proof (2):  
 >  $\emptyset\cap S=\emptyset$  
    $\emptyset\cup S=S$  
    $P(\emptyset\cup S)=P(\emptyset)+P(S)$; $P(\emptyset\cup S)=P(S)=1$
