--- a/static/lecture561/lecture01.Rmd
+++ b/static/lecture561/lecture01.Rmd
@@ -19,11 +19,9 @@ options(width = 2000)
 options(repos="https://cran.rstudio.com")
 ```
 
-{.tabset .tabset-fade .tabset-pills}
+## {.tabset .tabset-fade .tabset-pills}
 
-## week 1 {.tabset .tabset-fade .tabset-pills}
-
-### 2018-09-25 {.tabset .tabset-fade .tabset-pills} 
+### week 1  {.tabset .tabset-fade .tabset-pills} 
 
 #### 1. Set Theory
 Definition  
@@ -250,12 +248,12 @@ Ex: How many differenct ways can the letters in "STATISTICS" be arranged?
 
 Number of possible arrangements of size r from n objects
 
-
+{.table .table-condensed .table-striped}
 | | Without replacement | With replacement
 | --- | --- | ---
 | Ordered | $\frac{n!}{(n-r)!}$ | $n^r$
 | Unordered | $\binom nr$ | $\binom{n+r-1}r$
 
-## Week 2 {.tabset .tabset-fade .tabset-pills}
-### 2018-10-02 {.tabset .tabset-fade .tabset-pills}
+### Week 2 {.tabset .tabset-fade .tabset-pills}
+
 #### Enumerating Outcomes
