--- a/static/assignment564/lab01.Rmd
+++ b/static/assignment564/lab01.Rmd
@@ -14,7 +14,7 @@ output:
  (a). Specify the probability distribution of $Z_i$ along with the value(s) of parameter(s).  
 
  > $X_1,X_2,X_3$ are three **independent and identically distributed random variable** that follows a normal distribution with same mean $\mu$ and variance $\sigma^2$  
-$Z_i=\frac{X_i-\mu}n$ is called a **standard normal random variable**.  
+$According to the definition, Z_i=\frac{X_i-\mu}n$ is called a **standard normal random variable**.  
 
  $$\therefore Z_{i}\sim iid\ N\left(0,1\right)$$   
 
@@ -32,9 +32,9 @@ $Z_i=\frac{X_i-\mu}n$ is called a **standard normal random variable**.
  (e). Specify the probability distribution of $Z_{i}^2$ along with the value(s) of parameter(s).  
 
  > According to the definition of **Chi-square** distribution  
-   When $Z_i$ is a SND,  $Z_{i}^2$ is a chi square distribution with 1 degree of freedom
+   When $Z_i$ is a SND,  $Z_{i}^2$ is a chi-square distribution with 1 degree of freedom
 
- $$\therefore Z_i^2\sim \chi_1^2,\quad E(\chi_1^2)=1,\quad Var(\chi_1^2)=2\times1=1$$
+ $$\therefore Z_i^2\sim \chi_1^2,\quad E(\chi_1^2)=1,\quad Var(\chi_1^2)=2\times1=2$$
 
  Let $y_2=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$  
  (f). Specify the probability distribution of $y_2$ along with the value(s) of parameter(s). 
