564 he00 small adjust

--- a/docs/assignment564/lab01.Rmd
+++ b/docs/assignment564/lab01.Rmd
@@ -14,7 +14,7 @@ output:
  (a). Specify the probability distribution of $Z_i$ along with the value(s) of parameter(s).  
 
  > $X_1,X_2,X_3$ are three **independent and identically distributed random variable** that follows a normal distribution with same mean $\mu$ and variance $\sigma^2$  
-$According to the definition, Z_i=\frac{X_i-\mu}n$ is called a **standard normal random variable**.  
+According to the definition, $Z_i=\frac{X_i-\mu}n$ is called a **standard normal random variable**.  
 
  $$\therefore Z_{i}\sim iid\ N\left(0,1\right)$$   
 
